tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:22:13 --------------------------------------
22 |  usingFile: f => // error
   |             ^
   |Found:    (f: File^'s1) ->'s2 Unit
   |Required: File^ => Unit
   |
   |where:    => refers to a fresh root capability created in method runAll0 when checking argument to parameter f of method usingFile
   |          ^  refers to the universal root capability
   |
   |Note that capability cap is not included in capture set {C}.
23 |    cur = (() => f.write()) :: Nil
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:32:13 --------------------------------------
32 |  usingFile: f => // error
   |             ^
   |Found:    (f: File^'s3) ->'s4 Unit
   |Required: File^ => Unit
   |
   |where:    => refers to a fresh root capability created in method runAll1 when checking argument to parameter f of method usingFile
   |          ^  refers to the universal root capability
   |
   |Note that capability cap cannot be included in capture set {C} of value cur.
33 |    cur.set:
34 |      (() => f.write()) :: Nil
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:44:16 -----------------------------------------------------------
44 |  val cur = Ref[List[Proc]](xs) // error
   |                ^^^^^^^^^^
   |                Type variable T of constructor Ref cannot be instantiated to List[() => Unit] since
   |                the part () => Unit of that type captures the root capability `cap`.
   |
   |                where:    => refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:46:35 --------------------------------------
46 |    val next: () => Unit = cur.get.head // error
   |                           ^^^^^^^^^^^^
   |                           Found:    () => Unit
   |                           Required: () =>² Unit
   |
   |                           where:    =>  refers to the universal root capability
   |                                     =>² refers to a fresh root capability in the type of value next
   |
   |                           Note that capability cap is not included in capture set {cap}
   |                           because cap is not visible from cap in value next.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:48:20 --------------------------------------
48 |    cur.set(cur.get.tail: List[Proc]) // error
   |            ^^^^^^^^^^^^
   |            Found:    List[() => Unit]
   |            Required: List[() =>² Unit]
   |
   |            where:    =>  refers to the universal root capability
   |                      =>² refers to a fresh root capability created in method runAll3
   |
   |            Note that capability cap is not included in capture set {cap}
   |            because cap is not visible from cap in method runAll3.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:54:51 -----------------------------------------------------------
54 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                                                   ^
   |                                    Type variable A of constructor Id cannot be instantiated to () => Unit since
   |                                    that type captures the root capability `cap`.
   |
   |                                    where:    => refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:59:27 --------------------------------------
59 |  val id: File^ -> File^ = x => x // error
   |                           ^^^^^^
   |                  Found:    (x: File^) ->'s5 File^²
   |                  Required: File^ -> File^³
   |
   |                  where:    ^  refers to the universal root capability
   |                            ^² refers to a root capability associated with the result type of (x: File^): File^²
   |                            ^³ refers to a fresh root capability in the type of value id
   |
   |                  Note that capability <cap of (x: File^): File^> is not included in capture set {cap}
   |                  because <cap of (x: File^): File^> is not visible from cap in value id.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:69:38 --------------------------------------
69 |  val leaked = usingFile[File^{id*}]: f => // error
   |                                      ^
   |Found:    (f: File^'s6) ->'s7 File^{id*}
   |Required: File^ => File^{id*}
   |
   |where:    => refers to a fresh root capability created in value leaked when checking argument to parameter f of method usingFile
   |          ^  refers to the universal root capability
   |
   |Note that capability cap is not included in capture set {id*}.
70 |    val f1: File^{id*} = id(f)
71 |    f1
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:87:10 --------------------------------------
87 |  ps.map((x, y) => compose1(x, y)) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (x$1: (A^ ->'s8 A^'s9, A^ ->'s10 A^'s11)^'s12) ->'s13 A^'s14 ->'s15 A^'s16
   |Required: ((A ->{ps*} A, A ->{ps*} A)) => A^'s17 ->'s18 A^'s19
   |
   |where:    => refers to a fresh root capability created in method mapCompose when checking argument to parameter f of method map
   |          ^  refers to the universal root capability
   |
   |Note that capability ps* cannot be included in capture set {} of value x.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:90:10 --------------------------------------
90 |  ps.map((x, y) => compose1(x, y)) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (x$1: (A^ ->? A^?, A^ ->? A^?)^?) ->? A^? ->? A^?
   |Required: ((A ->{C} A, A ->{C} A)) => A^? ->? A^?
   |
   |where:    => refers to a fresh root capability created in method mapCompose2 when checking argument to parameter f of method map
   |          ^  refers to the universal root capability
   |
   |Note that capability C cannot be included in capture set {} of value x.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:39:31 -----------------------------------------------------------
39 |    val next: () => Unit = cur.head   // error, use
   |                           ^^^^^^^^
   |                           Local reach capability xs* leaks into capture scope of method runAll2.
   |                           You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:62:36 -----------------------------------------------------------
62 |  val leaked = usingFile[File^{id*}]: f => // error: separation
   |               ^
   |        Local cap created in type of parameter x leaks into capture scope of enclosing function
   |
   |        where:    cap is a fresh root capability created in value id of parameter parameter x of method $anonfun
63 |    val f1: File^{id*} = id(f)
64 |    f1
